Moved console log read from LV2 and main to misc_gui

--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,8 @@ yoshimi 1.7.4 M
 2021-1-23 Will
 * BugFix: used invalid type offset (-1)
   goes into endless loop
+* Moved console log read from LV2 and main to misc_gui
+  also cleaned up code
 
 2021-1-23 Will
 * Revised the following instrument banks:
