--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -1,6 +1,6 @@
 BUG! If jack is selected for audio but there are no physical ports Yoshimi quits with CLI warning - should run with gui warning as well, or better still loop back to try alsa.
 
-Rare bug: stand-alone GUI freezes and no further system changes if new instance started while instrument change in progress.
+BUG! stand-alone GUI freezes and no further system changes if new instance started while instrument change in progress.
 
 Minor bug Multi instances produce jack error reports when main instance closed, even if they have been closed first - been there since V 1.4.1 :(
 
