--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.7.4 M
 
+2021-1-28 Will
+* Another attempt to reosve LV2/Main conflicts.
+
 2021-1-27 Will
 * Reverted startup to threadmessage style.
 
