--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.7.4 M
 
+2021-2-2 Will
+* Another attempt to resolve standalone lock up issue.
+
 2021-2-1 Will
 * BugFix: Panel window not handling part group changes
 * Commented out some redundant routines.
