CLI no longer directly handles bank removal

--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,9 @@
 yoshimi 1.7.4 M
 
 2021-2-4 Will
+* CLI no longer directly handles bank removal.
+
+2021-2-4 Will
 * Properly integrated adding a new bank.
 
 2021-2-2 Will
