--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,10 @@ yoshimi 1.7.4 M
 
 2021-2-8 Will
 * Revised messaging for bank root add/remove.
+* Started changing 'SetSystemValues' to non threadmessage type.
+* Reinstated and updated list in docs 'NRPN_System_Settings.txt
+  Corrected control numbers.
+  It hasn't suppored list displays for some time.
 
 2021-2-7 Will
 * Improved search for user guide.
