--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.7.4 M
 
+2021-2-11 Will
+* Disabled call toe Gui thread messages in UI/MiscGui
+  Now redundant
+* BugFix: AddSynthModuator gui state of sync.
+
 2021-2-9 Will
 * All remaining 'SetSystemValues' made non threadmessage type.
 
