--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,15 @@
-yoshimi 1.7.4 M
+yoshimi 2.0 prev
+
+2021-2-13 Will
+* Aftertouch saved in Yoshi instruments and patchsets.
+* Panning law saved in patchsets and states.
+* Disabled automatically pushing main window to top.
+  It hid startup warning messages.
+* Disabled printing of tooltip sizes 'tipset'.
+* Echo exit warnings to CLI if set for console window.
+* Started updating docs.
+* Set min config to 2.0
+* Set version as 2.0 prev
 
 2021-2-12 Will
 * Revised GUI for AddSynth Voice.
