--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,11 @@
-yoshimi 2.0 rc3
+yoshimi 2.0 rc4
+
+2021-2-25 Will
+* Now includes new filer updates and additions.
+* Removed Miscellany/Images directory.
+  It's redundant. All images appear in usr guide.
+  Significant ones are also on the website.
+* Set version as 2.0 rc4
 
 2021-2-19 Will
 * A few more instrument type changes.
