Enabled LFO BPM ratios in CLI Unified CLI and GUI BPM reporting Allow delay in scripts up to 30 seconds Made filer window location independent of source

--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,10 @@
-yoshimi 2.0 rc5
+yoshimi 2.0 rc6
+
+2021-2-27 Will
+* Enabled LFO BPM ratios in CLI.
+* Unified CLI and GUI BPM reporting.
+* Allow delay in scripts up to 30 seconds.
+* Made filer window location independent of source.
 
 2021-2-25 Will (additional)
 * Fixed regression: Named instrument load shows time again.
