--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.0 M
 
+2021-3-7 Will
+* BugFix: GUI Filter frequency not showing correct value.
+* Added 3 new instruments to Companion bank.
+
 2021-3-3 Will
 * Added TextLists.h to Interchange.cpp
   Fixes potential issue with GCC 10.2.0
