--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@ yoshimi 2.0 M
 
 2021-3-9 Will
 * Completed GUI filter frequency correction.
+* Clear changed original part name on reloads and resets.
 
 2021-3-7 Will
 * BugFix: GUI Filter frequency not showing correct value.
