--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.0 M
 
+2021-3-11 Will
+* BugFix: crash when locking midilearn history from GUI.
+  Caused by placement of presets in the XML list.
+  Now moved after midilearn.
+
 2021-3-9 Will
 * Completed GUI filter frequency correction.
 * Clear changed original part name on reloads and resets.
