--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 2.0 M
 
+2021-3-20 Will
+* BugFix: GUI out of sync on MIDI-learned mod type change.
+
 2021-3-17 Will
 * A few spelling checks in the Gui.
 
