--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.0 M
 
+2021-3-27 Will
+* BugFix: Filter correction (2021-3-9) altered settings.
+  When window opened wrote values instead of reading.
+
 2021-3-21 Will
 * Made CLI wavform filter type show text to match input.
   Was previously confusingly numeric output.
