--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,8 @@ yoshimi 2.0 M
 * BugFix: Filter correction (2021-3-9) altered settings.
   When window opened wrote values instead of reading.
 
+* BugFix: GUI SysEff send-to not seeing set default.
+
 2021-3-21 Will
 * Made CLI wavform filter type show text to match input.
   Was previously confusingly numeric output.
