--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 2.0 M
 
+2021-4-7 Will
+BugFix: Importing keymap not updating GUI Ref. Freq.
+
 2021-4-6 Will
 * BugFix: Crash on oversize filer directory listing.
   This is a provisional fix, increasing max size to
