--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,8 @@ yoshimi 2.0 M
 2021-4-7 Will
 BugFix: Importing keymap not updating GUI Ref. Freq.
 
+Made small change to config initial sequence re argp.
+
 2021-4-6 Will
 * BugFix: Crash on oversize filer directory listing.
   This is a provisional fix, increasing max size to
