--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,12 @@
 yoshimi 2.0 M
 
+2021-4-17 Will
+* Added Stick Hit patch the Drums.
+* Set Zyn patch compatiblity to version to 2.4.
+  There never was a 2.0.
+* Commented out direct key actions.
+  It's not ready for release.
+
 2021-4-14 Will
 * LV2 config cleanups.
 * Started per instance key only rescale to screen size.
