--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -1,3 +1,5 @@
+BUG: Crash loading MIDI-Learn files from CLI startup.
+
 BUG! If jack is selected for audio but there are no physical ports Yoshimi quits with CLI warning - should continue run with no audio and gui warning as well, or better still loop back to try alsa.
 
 BUG! stand-alone GUI freezes and no further system changes if new instance started while instrument change in progress.
