--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,7 @@ yoshimi 2.0.1 M
 * Made small range check in CLI formant filter.
 * Added CLI option to start scripts from any level.
 * BugFix: Earlier Effects fix not handling no FLTK.
+* BugFix: MIDI_learn FLTK not checked.
 
 2021-5-6 Will
 * Replaced ringbuffer with improved code from Rainer
