--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 2.0.1 M
 
+2021-5-9 Will
+* Added new user guide to repository in 'doc'
+
 2021-5-8 Will
 * Made small range check in CLI formant filter.
 * Added CLI option to start scripts from any level.
