--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 2.0.1 M
 
+2021-5-10 Will
+* Tidied up Limits code.
+
 2021-5-9 Will
 * Added new user guide to repository in 'doc'
 * Completed Part in user guide.
