--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.0.1 M
 
+2021-5-13 Will
+* Sub/Pad overtone par2 disabled if position is Shift.
+  Avoids user confusion. The control not used here.
+
 2021-5-10 Will
 * Tidied up Limits code.
   Included missed 'magic' numbers Rainer saw.
