--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,9 @@
 yoshimi 2.0.1 M
 
 2021-6-1 Will
+* User guide work on Midi learn and Vectors.
+
+2021-6-1 Will
 * Merged in user guide updates from Lorenzo
 
 2021-5-28 Will
