More work on User gude vectors

--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,9 @@
 yoshimi 2.0.1 M
 
-2021-6-1 Will
+2021-6-5 Will
+* More work on User gude vectors.
+
+2021-6-4 Will
 * User guide work on Midi learn and Vectors.
 
 2021-6-1 Will
