--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,11 @@
 yoshimi 2.0.1 M
 
+2021-6-6 Will
+* BugFix: solo not restoring chanels when turned off.
+* User Guide solo mostly done.
+
 2021-6-5 Will
-* More work on User gude vectors.
+* More work on User guide vectors.
 
 2021-6-4 Will
 * User guide work on Midi learn and Vectors.
