--- a/Changelog
+++ b/Changelog
@@ -3,10 +3,13 @@ yoshimi 2.0.1 M
 2021-6-7 Will
 * MIDI learn guide almost complete.
 * Small corrections to Vectors.
+* Further small adustments and corrections to guide.
 
 2021-6-6 Will
 * BugFix: solo not restoring chanels when turned off.
 * User Guide solo mostly done.
+
+* Further manual corrections and adjustments.
 
 * Completed Vectors.
 * Completed Solo.
