Added more cross-links in guide

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 2.0.1 M
 
+2021-6-8 Will
+* Added more cross-links in guide.
+
 2021-6-7 Will
 * MIDI learn guide almost complete.
 * Small corrections to Vectors.
