--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 2.0.1 M
 
+2021-6-11 Will
+* BugFix: first synth not seeing default state on resets.
+
 2021-6-8 Will
 * Added more cross-links in guide.
 
