--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.0.1 M
 
+2021-6-14 Will
+* Moved examples directory into doc.
+  Required by debian.
+
 2021-6-13 Will
 * Selecting directory from filer now needs double click.
 
