Added further details to filer in manual Various small adjustments and spelling checks

--- a/Changelog
+++ b/Changelog
@@ -6,6 +6,9 @@ yoshimi 2.0.2
 * Improved PadSynth Base Type layout.
   Profile menu named.
 
+* Added further details to filer in manual.
+* Various small adjustments and spelling checks.
+
 2021-6-17 Will
 * Manual now points to correct version.
 * Prepared for minor release.
