Added new PadSynth image

--- a/Changelog
+++ b/Changelog
@@ -8,6 +8,7 @@ yoshimi 2.0.2
 
 * Added further details to filer in manual.
 * Various small adjustments and spelling checks.
+* Added new PadSynth image.
 
 2021-6-17 Will
 * Manual now points to correct version.
