Implemented Effects BPM control for CLI Updated Effects in new user guide

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.0.2M
 
+2021-7-15 Will
+* Implemented Effects BPM control for CLI.
+* Updated Effects in new user guide.
+
 2021-7-14 Will
 * Merged in Effects BPM control from Kristian.
 * Adjusted to CLI waveform list.
