--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -4,11 +4,12 @@ BUG! If jack is selected for audio but there are no physical ports Yoshimi quits
 
 BUG! stand-alone GUI freezes and no further system changes if new instance started while instrument change in progress.
 
-BUG! large bugger sizes progressively chop off the first part of note attack.
+BUG! large buff        er sizes progressively chop off the first part of note attack.
 
 Minor bug Multi instances produce jack error reports when main instance closed, even if they have been closed first - been there since V 1.4.1 :(
 
 GUI Oddity. Press spacebar on startup and you disable part 1 AddSynth engine.
+From then on repeats the last action.
 
 Add which engines are enabled in CLI list part.
 
@@ -26,8 +27,6 @@ Visible in carla apparently.
 Requested: auto 'apply' timer for padsynth.
 
 In filer show actual extension (xiz/xiy)
-
-Make dir selection double-click
 
 In controllers provide dropdown menu for choice of modulation (LFO) function.
     Off
