--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 2.0.2M
 2021-7-25 Will
 * Small cleanups and doc updates.
 * Started CCs/NRPNs on user guide.
+* BugFix: not responding to NRPN sys/ins effects.
 
 2021-7-21 Will
 * Further updates to User guide
