Added filer images to new user guide

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.0.2 M
 
+2021-7-30 Will
+* Added filer images to new user guide.
+  also many spelling corrections :(
+
 2021-7-29 Will
 * Updated PDF manual.
 * Added links for new manual.
