Revised console window code Updated user guide

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 2.0.2 M
 
+2021-8-1 Will
+* Revised console window code.
+  text size independent of dimensions.
+* Updated user guide.
+
 2021-7-30 Will
 * Added filer images to new user guide.
   also many spelling corrections :(
