Considerable expansion of CLI notes in guide

--- a/Changelog
+++ b/Changelog
@@ -9,6 +9,8 @@ yoshimi 2.0.2 M
   One line error.
 * Added more comments in misc funcs.
 
+* Considerable expansion of CLI in guide.
+
 2021-7-30 Will
 * Added filer images to new user guide.
   also many spelling corrections :(
