Completed CLI guide

--- a/Changelog
+++ b/Changelog
@@ -11,6 +11,8 @@ yoshimi 2.0.2 M
 
 * Considerable expansion of CLI in guide.
 
+* Completed CLI guide.
+
 2021-7-30 Will
 * Added filer images to new user guide.
   also many spelling corrections :(
