Further work on User Guide

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 2.0.2 M
 
+2021-8-2 Will
+* Further work on User Guide.
+
 2021-8-1 Will
 * Revised console window code.
   text size independent of dimensions.
