Changed filer from fixed array to vector

--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,8 @@ yoshimi 2.0.2 M
 2021-8-2 Will
 * Further work on User Guide.
 
+* Changed filer from fixed array to vector.
+
 2021-8-1 Will
 * Revised console window code.
   text size independent of dimensions.
