--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 2.0.2 M
 
+2021-8-4 Will
+* User guide more detail and cross links.
+
 2021-8-3 Will
 * User guide corrections and improvements.
 
