Clarified guide text in navigation Added more links

--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,8 @@ yoshimi 2.0.2 M
 
 2021-8-6 Will
 * Improved manual's CC/NRPN descriptions.
+* Clarified guide text in navigation.
+* Added more links.
 
 2021-8-5 Will
 * Improved reporting when loading manual.
