--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 2.0.2 M
 
+2021-8-7 Will
+* Added an appendix to guide.
+
 2021-8-6 Will
 * Improved manual's CC/NRPN descriptions.
 * Clarified guide text in navigation.
