--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@ yoshimi 2.0.2 M
 
 2021-8-9 Will
 * Changed FR to RR in CLI LFO to resolve contention.
+* Various guide updates and wc3 compliance checks.
 
 2021-8-8 Will
 * Util cleanups.
