Doc updates Changed Banks ID placeholder

--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,11 @@
 yoshimi 2.0.2 M
 
 2021-8-10 Will
+* Doc updates.
+* Changed Banks ID placeholder.
+  May be using it soon.
+
+2021-8-10 Will
 * Further Guide updates and improvements.
   Also some doc cleanups.
 
