--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 2.0.2 M
 2021-8-13 Will
 * Expanded EQ Band, Type, Stages labels.
   Why were they ever abbreviated?
+* Bugfix: Virtual keyboard not seen on first startup.
 
 2021-8-12 Will
 * Doc updates.
