--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.0.2 M
 
+2021-8-14 Will
+* Bugfix: MIDI_Learn not loading/saving files.
+  Not handling spaces in path or leafname.
+
 2021-8-13 Will
 * Expanded EQ Band, Type, Stages labels.
   Why were they ever abbreviated?
