--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 2.0.2 M
 
+2021-8-15 Will
+* Some small code cleanups.
+
 2021-8-14 Will
 * Bugfix: MIDI_Learn not loading/saving files.
   Not handling spaces in path or leafname.
