--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,9 @@
-yoshimi 2.1.0 rc1
+yoshimi 2.1.0
+
+2021-8-23 Will
+* Final cleanups
+* General Doc updates
+* Set release version 2.1.0
 
 2021-8-22 Will
 * Last minute bugfix :(
