--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 2.1.0 M
 
+2021-8-25 Will
+* Improved manual search.
+  No longer uses tmp and reinstated PDF.
+* Moved all popen commands to FileMgrFuncs.h
+* Improved single master detection.
+
 2021-8-24 Will
 * Slight speed up for user guide search.
 
