--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 2.1.0 M
 
+2021-8-28 Will
+* Reverted manual code to minimise load time.
+
 2021-8-25 Will
 * Improved manual search.
   No longer uses tmp and reinstated PDF.
