--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,8 @@ yoshimi 2.1.0 M
 
 2021-8-29 Will
 * Cleaned up history vector implementation.
+* Separated last seen files from history.
+  If history was locked so was last seen.
 
 2021-8-28 Will
 * Reverted manual code to minimise load time.
