--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.1.0 M
 
+2021-8-30 Will
+* BugFix: crash when trying to import bank.
+  last seen code not trapping out of range values.
+
 2021-8-29 Will
 * Cleaned up history vector implementation.
 * Separated last seen files from history.
