--- a/Changelog
+++ b/Changelog
@@ -5,6 +5,8 @@ yoshimi 2.1.0 M
 * Code cleanups.
   No changes to logic.
 
+* CLI load file at start can now specify part number.
+
 2021-8-30 Will
 * BugFix: crash when trying to import bank.
   last seen code not trapping out of range values.
