--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 2.1.0 M
 
+2010-9-7 Will
+* BugFix: Corrupted instrument Copyright and Comments entries.
+
 2010-9-5 Will
 * Replaced logging type numbers with labels.
 * Added (commented out) test massages in main.cpp.
