--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.1.0 M
 
+2010-9-10 Will
+* Commented out legit filename test in MidiLearn.cpp
+  This was falsely adjusting valid filenames.
+
 2010-9-7 Will
 * BugFix: Corrupted instrument Copyright and Comments entries.
 
