--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 2.1.0 M
 
+2010-9-30 Will
+* Moved userDir definition to FileMgrFuncs.cpp
+  from config.cpp
+
 2010-9-29 Will
 * Removed controls to enable part on program change.
   It was only relevant to MIDI and always on regardless.
