--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,9 @@ yoshimi 2.1.0 M
 2010-9-30 Will
 * Moved userDir definition to FileMgrFuncs.cpp
   from config.cpp
+* Moved localDir definition to FileMgrFuncs.cpp
+  from config.cpp
+  Also renamled confusing duplicate names in bank.cpp
 
 2010-9-29 Will
 * Removed controls to enable part on program change.
