--- a/Changelog
+++ b/Changelog
@@ -7,6 +7,8 @@ yoshimi 2.1.0 M
   from config.cpp
   Also renamed confusing duplicate names in bank.cpp
 * Rationalised string manipulation in bank.cpp
+* Moved configDir definition to FileMgrFuncs.cpp
+  from config.cpp
 
 2010-9-29 Will
 * Removed controls to enable part on program change.
